--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
 
 <div>
 <h1>
-    Go to Link For More Related Content: <a href="https://www.forfrontend.com/">ForFrontend</a>
+    Go to Link For More Related Content: <a href="https://forfrontend.com/">ForFrontend</a>
 </h1>
 <ul>
     <h2>Related Content Link</h2>
-    <li><a href="https://www.forfrontend.com/search/label/portfolio%20card?&max-results=5">Portfolio Card</a> </li>
-    <li><a href="https://www.forfrontend.com/search/label/product%20card?&max-results=5">Product Card</a> </li>
-    <li><a href="https://www.forfrontend.com/search/label/simple%20card?&max-results=5">Simple Card</a> </li>
-    <li><a href="https://www.forfrontend.com/search/label/Hover%20Effect%20Menu?&max-results=5">Hover Effect Menubar</a> </li>
-    <li><a href="https://www.forfrontend.com/search/label/typography?&max-results=5">Typography</a> </li>
-    <li><a href="https://www.forfrontend.com/search/label/animation%20menubar?&max-results=5">Animated MenuBar</a> </li>
+    <li><a href="https://forfrontend.com/animated-css-cards/">Animated CSS Card</a> </li>
+    <li><a href="https://forfrontend.com/product-cards-design-css/">Product Card</a> </li>
+    <li><a href="https://forfrontend.com/simple-and-beautiful-css-card/">Simple Card</a> </li>
+    <li><a href="https://forfrontend.com/navigation-menu-hover-effects-css/">Hover Effect Menubar</a> </li>
+    <li><a href="https://forfrontend.com/popup-animation-css/">Popup Examples</a> </li>
+    <li><a href="https://forfrontend.com/css-3d-animation-menu/">Animated MenuBar</a> </li>
   
 </ul>
 </div>
